# AutoUpdater

./: .gitignore  README.md
Client/: CMakeLists.txt  CMakeSettings.json  installer.html  main.cpp  main.js
Common/: HeapFilesSync.cpp  HeapFilesSync.h  ProjectsManager.cpp  ProjectsManager.h  download.cpp  download.h  exec.h  jcc.h  json.h  md5.h  tools.cpp  tools.h  ui.cpp  ui.h  zpp.h
Uploader/: CMakeLists.txt  main.cpp
